welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Boolean
		if (nums(i) = value) {return value}
                            ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to nums.length-1) {
               ^